Quorum3/Library/Tests/TypeChecker/Fail/ImpAssignNumObjTextObjWrapped.quorum
class main
    action main
        Text t
        t:setValue("text")
        Number num = t
    end
end